@@ -1,5 +1,5 @@
 /* Write formatted list with names for addresses in backtrace to a file.
-   Copyright (C) 1998, 2000, 2003, 2005 Free Software Foundation, Inc.
+   Copyright (C) 1998,2000,2003,2005,2009 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Ulrich Drepper <drepper@cygnus.com>, 1998.
 
@@ -46,47 +46,63 @@ __backtrace_symbols_fd (array, size, fd)
     {
       char buf[WORD_WIDTH];
       Dl_info info;
+      struct link_map *map;
       size_t last = 0;
 
-      if (_dl_addr (array[cnt], &info, NULL, NULL)
-	  && info.dli_fname && info.dli_fname[0] != '\0')
+      if (_dl_addr (array[cnt], &info, &map, NULL)
+	  && info.dli_fname != NULL && info.dli_fname[0] != '\0')
 	{
 	  /* Name of the file.  */
 	  iov[0].iov_base = (void *) info.dli_fname;
 	  iov[0].iov_len = strlen (info.dli_fname);
 	  last = 1;
 
-	  /* Symbol name.  */
-	  if (info.dli_sname != NULL)
+	  if (info.dli_sname != NULL || map->l_addr != 0)
 	    {
 	      char buf2[WORD_WIDTH];
 	      size_t diff;
 
-	      iov[1].iov_base = (void *) "(";
-	      iov[1].iov_len = 1;
-	      iov[2].iov_base = (void *) info.dli_sname;
-	      iov[2].iov_len = strlen (info.dli_sname);
+	      iov[last].iov_base = (void *) "(";
+	      iov[last].iov_len = 1;
+	      ++last;
+
+	      if (info.dli_sname != NULL)
+		{
+		  /* We have a symbol name.  */
+		  iov[last].iov_base = (void *) info.dli_sname;
+		  iov[last].iov_len = strlen (info.dli_sname);
+		  ++last;
+		}
+	      else
+		/* We have no symbol, so describe it as relative to the file.
+		   The load bias is more useful to the user than the load
+		   address.  The use of these addresses is to calculate an
+		   address in the ELF file, so its prelinked bias is not
+		   something we want to subtract out.  */
+		info.dli_saddr = (void *) map->l_addr;
 
 	      if (array[cnt] >= (void *) info.dli_saddr)
 		{
-		  iov[3].iov_base = (void *) "+0x";
+		  iov[last].iov_base = (void *) "+0x";
 		  diff = array[cnt] - info.dli_saddr;
 		}
 	      else
 		{
-		  iov[3].iov_base = (void *) "-0x";
+		  iov[last].iov_base = (void *) "-0x";
 		  diff = info.dli_saddr - array[cnt];
 		}
-	      iov[3].iov_len = 3;
+	      iov[last].iov_len = 3;
+	      ++last;
 
-	      iov[4].iov_base = _itoa_word ((unsigned long int) diff,
-					    &buf2[WORD_WIDTH], 16, 0);
-	      iov[4].iov_len = &buf2[WORD_WIDTH] - (char *) iov[4].iov_base;
+	      iov[last].iov_base = _itoa_word ((unsigned long int) diff,
+					       &buf2[WORD_WIDTH], 16, 0);
+	      iov[last].iov_len = (&buf2[WORD_WIDTH]
+				   - (char *) iov[last].iov_base);
+	      ++last;
 
-	      iov[5].iov_base = (void *) ")";
-	      iov[5].iov_len = 1;
-
-	      last = 6;
+	      iov[last].iov_base = (void *) ")";
+	      iov[last].iov_len = 1;
+	      ++last;
 	    }
 	}
 
